[gd_scene load_steps=7 format=2]

[ext_resource path="res://Beaver.gd" type="Script" id=1]
[ext_resource path="res://sprites/Beaver.png" type="Texture" id=2]
[ext_resource path="res://bloodspatter.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Run"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Stand"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.38692, 6.3612 )

[node name="Beaver" type="KinematicBody2D"]
position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Run = SubResource( 1 )
anims/Stand = SubResource( 2 )

[node name="rray" type="RayCast2D" parent="."]
modulate = Color( 0.470588, 0.658824, 0.054902, 1 )
position = Vector2( 7, -2 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="lray" type="RayCast2D" parent="."]
position = Vector2( -7, -2 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.894966, -7.45802 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
